<resources>
    <string name="app_name">HL</string>
    <string name="str_profile">Профиль</string>
    <string name="str_tasks">Задания</string>
    <string name="str_clan">Команда</string>
    <string name="textview_name">Имя</string>
    <string name="textview_score_for_day">Количество баллов за сегодня:</string>
    <string name="textview_score_all">Общее количество баллов:</string>
    <string name="str_rating">Рейтинг</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_settings">Настройки</string>
    <string name="textview_achievements">Достижения</string>

</resources>